--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Northcoders News API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha spec",
+    "test": "mocha spec --exit",
     "lint": "eslint ./ --fix",
     "pre-commit": "npm t",
     "posttest": "npm run lint",
@@ -31,7 +31,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "knex": "^0.15.2",
-    "pg": "^7.6.1"
+    "pg": "^7.6.1",
+    "supertest": "^3.4.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
