--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "knex": "^0.15.2",
-    "pg": "^7.6.1",
-    "supertest": "^3.4.2"
+    "pg": "^7.6.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -41,6 +40,7 @@
     "eslint-plugin-import": "^2.14.0",
     "husky": "^1.1.4",
     "mocha": "^6.0.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   }
 }
