--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Northcoders News API",
   "main": "index.js",
   "scripts": {
+    "start": "node listen.js",
     "test": "mocha spec --exit",
     "lint": "eslint ./ --fix",
     "pre-commit": "npm t",
@@ -15,7 +16,10 @@
     "seed:make": "knex seed:make",
     "seed:run": "knex seed:run",
     "dev": "nodemon listen.js",
-    "host": "node listen.js"
+    "host": "node listen.js",
+    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
+    "migrate:latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:latest",
+    "migrate:rollback:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:rollback"
   },
   "repository": {
     "type": "git",
