--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "knex": "^0.15.2",
-    "pg": "^7.6.1"
+    "pg": "^7.6.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
